<resources>
    <string name="app_name">Clothes On The Go</string>
    <string name="title_activity_toolbar">toolbar</string>
    <string name="shipping_cost">Shipping cost: $%.2f</string>
    <string name="dollar_amount">$%.2f</string>
    <string name="added_to_cart">Item added to cart</string>
    <string name="blank_quantity">Quantity cannot be blank</string>
    <string name="no_destination">Please select a destination</string>
    <string name="empty_cart">Your cart is empty, cannot checkout</string>
    <string name="location_header">Shipping Location</string>
    <string name="total_price_header">Total</string>
    <string name="add_to_cart_string">+ Cart</string>
    <string name="quantity_label">Quantity</string>
    <string name="delete_from_cart">Delete</string>
    <string name="login_text">Login</string>
    <string name="login_button">Login</string>
    <string name="checkout">Checkout</string>
</resources>